[tool.poetry]
name = "enviro_prometheus_exporter"
version = "0.1.0"
description = "Expose readings from enviro(plus) in Prometheus format"
authors = ["Mark S <github@sharpley.xyz@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.9.0"
influxdb-client = "^1.13.0"
pimoroni-bme280 = "^0.1.1"
enviroplus = "^0.0.3"
"RPi.GPIO" = "^0.7.0"
requests = "^2.25.1"
smbus = "^1.1.post2"
ltr559 = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
bump2version = "^1.0.1"

[tool.poetry.scripts]
enviro-exporter = 'enviro_prometheus_exporter.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
